# python-polish-version

./: .gitignore  README.md  example.ppy  identifiers.yml  main.py  note.txt  polish_python_translator.py  ppy.py  pyproject.toml
examples/: example.ppy  example2.ppy  example3.ppy  example4.ppy  example5.ppy  example6.ppy
grammar/: PolishPython.g4  PolishPython.interp  PolishPython.tokens  PolishPythonLexer.g4  PolishPythonLexer.interp  PolishPythonLexer.py  PolishPythonLexer.tokens  PolishPythonListener.py  PolishPythonParser.g4  PolishPythonParser.py  PolishPythonVisitor.py
helpers/: builtin_functions.py  tokens.py
parsers/: code_validator.py  polish_python_parser.py  syntax_error_listener.py
translations/: bool.py  bool_var.py  builtin_functions.py  operators.py  typing.py
translators/: polish_python_translator.py  translator_helper.py
